--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--                src="https://img.shields.io/badge/Ph.D.-UIUC%20(2022&#45;&#45;Now)-brightgreen?color=181717&amp;labelColor=blueviolet"-->
 <!--                alt="PhD"/></p>-->
         <p>
-            我来自东南大学<a href="https://cyber.seu.edu.cn/">网络空间安全学院</a>, 目前已经完成硕士一年级的学习，正在寻求硕博连读的博士生导师。
+            我来自东南大学<a href="https://cyber.seu.edu.cn/">网络空间安全学院</a>, 目前已经完成硕士一年级的学习，正在寻求接收硕博连读的博士生导师。
             在转入硕士阶段前，我获得了东南大学网络空间安全学院的学士学位。
         </p>
 
