--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <meta property="og:locale" content="en-US">
     <meta property="og:site_name" content="Xing-jian ZENG (曾行健)">
-    <meta property="og:title" content="Greetings! I’m Xing-jian ZENG (曾行健) 🍻">
+    <meta property="og:title" content="Greetings! I’m Xing-jian ZENG (曾行健) ">
 <!--    <link rel="canonical" href="https://zhiningliu.com/">-->
 <!--    <meta property="og:url" content="https://zhiningliu.com/">-->
     <meta property="og:description" content="About me">
