--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             我掌握基本的机器学习/深度学习开发技能，对不同的网络空间安全研究方向有一定认识。我比较熟悉/感兴趣的方向是：
             <ul>
                 <li>
-                    针对匿名网络的攻击（如网络指纹攻击和流关联攻击）
+                    隐私保护相关的应用场景（联邦学习系统、区块链）
                 </li>
                 <li>
-                    隐私保护相关的应用场景（区块链、如联邦学习、分布式机器学习）
+                    针对匿名网络的攻击（网络指纹攻击、流关联攻击）
                 </li>
             </ul>
             目前我的主要工作与不平衡学习（Imbalanced Learning）相关。不平衡学习在真实的安全场景下
